# stock

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: ci.yml
configs/: best_params.json  default.yaml  jp_stocks.yaml  phase2_experiment.yaml  phase2_tuned.yaml  phase3_best.yaml  phase3_selected.yaml  phase4_multi_sector.yaml  phase4_with_japan.yaml  phase5_optimized.yaml  universe_diversified.yaml  us_stocks.yaml
dashboard/: app.py
docs/: IMPROVEMENT_PLAN.md  INTEGRATION_PLAN.md  design_alternative_data_v2.md
scripts/: alpha_test.py  auto_retrain.sh  backfill_news_sentiment.py  backfill_predictions.py  backtest_walk_forward.py  daily_alt_data.py  daily_pipeline.sh  daily_predict.sh  ensemble_tuning.py  evaluate_calibration.py  evaluate_lstm.py  evaluate_new_tickers.py  evaluate_position_sizing.py  evaluate_risk_management.py  evaluate_stacking.py  feature_selection.py  final_evaluation.py  full_analysis.py  grade_predictions.py  honest_baseline.py  improved_analysis.py  validate_gates.py
src/qtp/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
src/qtp/backtest/: reporting.py  risk_management.py  signals.py
src/qtp/data/: database.py  storage.py  universe.py  validator.py
src/qtp/features/: cross_sectional.py  engine.py  registry.py  (+12 more)
tests/: conftest.py  test_cross_sectional.py
tests/test_backtest/: test_position_sizing.py  test_risk_management.py
tests/test_data/: test_database.py
tests/test_features/: test_tier5_new.py
tests/test_gates/: test_database_gates.py  test_gate1.py  test_gate2.py  test_gate3.py  test_gate4_magi.py  test_gate5_sentiment.py  test_gate6_integration.py  test_gate7_verdict.py  test_gates.py  test_pipeline.py
tests/test_models/: test_early_stopping.py
tests/test_validation/: test_metrics_costs.py  test_walk_forward.py
(+31 files in other folders)
