[project]
name = "quant-trading-pipeline"
version = "0.1.0"
description = "Quantitative trading pipeline: data → features → models → backtest → signals"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "pandas>=2.0",
    "yfinance>=0.2.36",
    "pandas-ta>=0.3.14b1",
    "TA-Lib>=0.4.28",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "optuna>=3.6",
    "shap>=0.45",
    "vectorbt>=0.26",
    "quantstats>=0.0.62",
    "scikit-learn>=1.4",
    "skfolio>=0.5",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.1",
    "structlog>=24.1",
    "fredapi>=0.5",
    "exchange-calendars>=4.5",
    "joblib>=1.3",
    "scipy>=1.12",
    "streamlit>=1.30",
    "edgartools>=5.0",
    "fear-greed>=0.1",
    "finnhub-python>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "pre-commit",
    "rich",
    "ipykernel",
]

[project.scripts]
qtp = "qtp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qtp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # Line length handled by formatter, not linter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require data/network",
]
addopts = "-m 'not slow and not integration'"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
